<resources>
    <string name="app_name">ACCP_Cal</string>
    <string name="backspace">⌫</string>
    <string name="pi">π</string>
    <string name="xpown">xⁿ</string>
    <string name="sqrt">√</string>
    <string name="divide">÷</string>
    <string name="square">x²</string>


    <string name="toggle">SWITCH</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>


    <string name="cube">x\u00B3</string>
    <string name="cuberoot">\u221B</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>

    <string name="epown">eⁿ</string>


    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
</resources>